# mixture

./: settings.gradle
TinyRenderer/: build.gradle
TinyRenderer/src/androidTest/java/com/example/tinyrenderer/: ExampleInstrumentedTest.kt
TinyRenderer/src/main/cpp/: CMakeLists.txt  MyThreadPool.h  README.md  aarch64_neon.s  main.cpp  mlog.h  mmath.h  model.h  rasterizer.cpp  rasterizer.h  shader.cpp  shader.h  stb_image_write.h  texture.cpp  texture.h  tinyrenderer.cpp  triangle.h  utils.h
TinyRenderer/src/main/cpp/output/: TTinyRenderer
TinyRenderer/src/main/java/com/example/tinyrenderer/: NativeLib.java
TinyRenderer/src/test/java/com/example/tinyrenderer/: ExampleUnitTest.kt
app/: build.gradle
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/mixture/: ColorPickerAdapter.kt  FunctionFragment.java  HomeFragment.java  MainActivity.java  MineFragment.java  PictureEditActivity.java  RendererActivity.java  ShaderExampleActivity.java
app/src/main/java/com/example/mixture/BrushDetails/: BrushDetailsAdapter.java  BrushDetailsViewModel.java
app/src/main/java/com/example/mixture/ColorPicker/: ColorPickerAdapter.java
app/src/main/java/com/example/mixture/EditorItemUI/: ItemAdapter.java  ItemModel.java
app/src/main/java/com/example/mixture/ImageEffect/: EffectAdapter.java  EffectType.java  ImageEffectUtils.java
app/src/main/java/com/example/mixture/Settings/: SettingsAdapter.java  SettingsViewModel.java
app/src/main/java/com/example/mixture/ShaderEffect/: ShaderEffectsManager.java  ShaderImageProcessor.java  ShaderImageView.java
app/src/main/java/com/example/mixture/UniversalItems/: ItemAdapter.java  ItemViewModel.java
app/src/main/java/com/example/mixture/Utils/: FolderPicker.java  ImageViewUtils.java  PermissionManager.java  ThemeUtils.java
app/src/main/res/drawable/: color_picker_circle.xml  rounded_corner_bg.xml
app/src/main/res/layout/: activity_main.xml  activity_picture_edit.xml  activity_renderer.xml  activity_shader_example.xml  brush_details.xml  color_picker_item.xml  dialog_effects.xml  fragment_function.xml  fragment_home.xml  fragment_mine.xml  item_effect.xml  item_setting_switch.xml  item_view.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_renderer_round.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
